clear meaning of packing (use export as in temporal), interlink the modules
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65228 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.out.gdal/r.out.gdal.html
+++ b/raster/r.out.gdal/r.out.gdal.html
@@ -232,7 +232,8 @@ page.
 <a href="r.out.bin.html">r.out.bin</a>,
 <a href="r.out.mat.html">r.out.mat</a>,
 <a href="r.out.png.html">r.out.png</a>,
-<a href="r.out.ppm.html">r.out.ppm</a>
+<a href="r.out.ppm.html">r.out.ppm</a>,
+<a href="r.pack.html">r.pack</a>
 </em>
 
 <h2>REFERENCES</h2>
