--- a/scripts/r.unpack/r.unpack.html
+++ b/scripts/r.unpack/r.unpack.html
@@ -27,7 +27,8 @@ r.unpack input=aspect.pack
 
 <em>
   <a href="r.pack.html">r.pack</a>,
-  <a href="r.in.gdal.html">r.in.gdal</a>
+  <a href="r.in.gdal.html">r.in.gdal</a>,
+  <a href="v.pack.html">v.pack</a>
 </em>
 
 <h2>AUTHORS</h2>
