--- a/scripts/v.unpack/v.unpack.html
+++ b/scripts/v.unpack/v.unpack.html
@@ -25,7 +25,8 @@ v.unpack input=random_point.pack
 
 <em>
   <a href="v.pack.html">v.pack</a>,
-  <a href="v.in.ogr.html">v.in.ogr</a>
+  <a href="v.in.ogr.html">v.in.ogr</a>,
+  <a href="r.pack.html">r.pack</a>
 </em>
 
 <h2>AUTHORS</h2>
