--- a/temporal/t.rast.import/t.rast.import.html
+++ b/temporal/t.rast.import/t.rast.import.html
@@ -26,7 +26,10 @@ t.rast.import input=lst_daily.tar.bzip2 output=lst_daily \
 <em>
 <a href="t.rast.export.html">t.rast.export</a>,
 <a href="t.create.html">t.create</a>,
-<a href="t.info.html">t.info</a>
+<a href="t.info.html">t.info</a>,
+<a href="r.in.gdal.html">r.in.gdal</a>,
+<a href="r.unpack.html">r.unpack</a>,
+<a href="t.vect.import.html">t.vect.import</a>
 </em>
 
 <h2>AUTHOR</h2>
