--- a/vector/v.out.ogr/v.out.ogr.html
+++ b/vector/v.out.ogr/v.out.ogr.html
@@ -173,7 +173,8 @@ v.out.ogr input=random3d_hull output=random3d_hull.kml format=KML type=face dsco
 <a href="db.out.ogr.html">db.out.ogr</a>,
 <a href="v.external.html">v.external</a>,
 <a href="v.external.out.html">v.external.out</a>,
-<a href="v.in.ogr.html">v.in.ogr</a>
+<a href="v.in.ogr.html">v.in.ogr</a>,
+<a href="v.pack.html">v.pack</a>
 </em>
 
 <h2>AUTHORS</h2>
