--- a/scripts/r.pack/r.pack.html
+++ b/scripts/r.pack/r.pack.html
@@ -32,7 +32,10 @@ r.unpack input=aspect.pack
 
 <em>
   <a href="r.unpack.html">r.unpack</a>,
-  <a href="r.out.gdal.html">r.in.gdal</a>
+  <a href="r.in.gdal.html">r.in.gdal</a>,
+  <a href="g.copy.html">g.copy</a>,
+  <a href="r.proj.html">r.proj</a>,
+  <a href="v.unpack.html">v.unpack</a>
 </em>
 
 
