--- a/scripts/v.pack/v.pack.html
+++ b/scripts/v.pack/v.pack.html
@@ -1,14 +1,17 @@
 <h2>DESCRIPTION</h2>
 
-<em>v.pack</em> collects vector map elements and support files and
-compressed them using <em>gzip</em> algorithm for copying. The packed
-file can be afterwards unpacked
+<em>v.pack</em> collects (packs) vector map elements and support files
+in GRASS Database and creates an compressed file using <em>gzip</em>
+algorithm. This file can be used to copy the vector map to another
+machine. The packed file can be afterwards unpacked
 by <em><a href="v.unpack.html">v.unpack</a></em>.
+
 
 <h2>NOTES</h2>
 
 Name of the pack file is determined by default from <b>input</b>
 parameter. Optionaly the name can be given by <b>output</b> parameter.
+
 
 <h2>EXAMPLE</h2>
 
@@ -24,13 +27,20 @@ the vector map can be afterwards unpacked by
 v.unpack input=random_point.pack
 </pre></div>
 
+
 <h2>SEE ALSO</h2>
 
 <em>
   <a href="v.unpack.html">v.unpack</a>,
-  <a href="v.in.ogr.html">v.in.ogr</a>
+  <a href="v.in.ogr.html">v.in.ogr</a>,
+  <a href="g.copy.html">g.copy</a>,
+  <a href="v.proj.html">v.proj</a>,
+  <a href="r.unpack.html">r.unpack</a>
 </em>
+
 
 <h2>AUTHORS</h2>
 
 Luca Delucchi, Fondazione E. Mach (Italy), based on the <em>r.pack</em> code
+
+<p><i>Last changed: $Date$</i>
