--- a/temporal/t.vect.export/t.vect.export.html
+++ b/temporal/t.vect.export/t.vect.export.html
@@ -113,7 +113,10 @@ Files:
 <em>
 <a href="t.vect.import.html">t.vect.import</a>,
 <a href="t.create.html">t.create</a>,
-<a href="t.info.html">t.info</a>
+<a href="t.info.html">t.info</a>,
+<a href="v.in.ogr.html">v.in.ogr</a>,
+<a href="v.unpack.html">v.unpack</a>,
+<a href="t.rast.export.html">t.rast.export</a>
 </em>
 
 <h2>AUTHOR</h2>
