--- a/temporal/t.vect.import/t.vect.import.html
+++ b/temporal/t.vect.import/t.vect.import.html
@@ -51,7 +51,10 @@ new_map_5@user1|new_map_5|None|user1|2012-05-01 00:00:00|2012-06-01 00:00:00
 <em>
 <a href="t.vect.export.html">t.vect.export</a>,
 <a href="t.create.html">t.create</a>,
-<a href="t.info.html">t.info</a>
+<a href="t.info.html">t.info</a>,
+<a href="v.out.ogr.html">v.out.ogr</a>,
+<a href="v.pack.html">v.pack</a>,
+<a href="t.rast.import.html">t.rast.import</a>
 </em>
 
 <h2>AUTHOR</h2>
@@ -59,4 +62,3 @@ new_map_5@user1|new_map_5|None|user1|2012-05-01 00:00:00|2012-06-01 00:00:00
 S&ouml;ren Gebbert, Th&uuml;nen Institute of Climate-Smart Agriculture
 
 <p><i>Last changed: $Date$</i>
-
