manual: mention r.[un]pack and v.[un]pack in intro texts
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65229 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/vectorintro.html
+++ b/vector/vectorintro.html
@@ -31,6 +31,12 @@ The <em>v.out.*</em> set of commands exports to various formats. To import
 and export only attribute tables, use <a href="db.in.ogr.html">db.in.ogr</a>
 and <a href="db.out.ogr.html">db.out.ogr</a>.
 
+<p>
+GRASS GIS vector map exchange between different locations (same projection)
+can be done in a lossless way using the <a href="v.pack.html">v.pack</a>
+and <a href="v.unpack.html">v.unpack</a> modules.
+
+<p>
 The naming convention for vector maps requires that map names start with a
 character, not a number (map name scheme: [A-Za-z][A-Za-z0-9_]*).
 
