cairodriver manual: SVG example added
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65264 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/cairodriver/cairodriver.html
+++ b/lib/cairodriver/cairodriver.html
@@ -84,7 +84,9 @@ Several environment variables affect the operation of the Cairo driver:
   </li>
 </ul>
 
-<h3>Examples</h3>
+<h2>EXAMPLES</h2>
+
+<h3>PNG Example</h3>
 
 Example: using the driver to generate a PNG file (bash-syntax):
 
@@ -101,9 +103,10 @@ d.vect map=streams width=1 color=blue fcolor=aqua type=area,line
 d.vect map=roadsmajor width=2
 </pre></div>
 
-<!-- TODO: why does it generate rasterized output?
+<h3>PDF Examples</h3>
 
-Example: using the driver to generate a PDF file with a vector map (bash-syntax):
+Example: using the driver to generate a PDF vector file with a vector
+map (bash-syntax):
 
 <div class="code"><pre>
 export GRASS_RENDER_IMMEDIATE=cairo
@@ -116,9 +119,10 @@ g.region vector=roadsmajor
 d.font Vera
 d.vect map=roadsmajor layer=1 display=shape attrcolumn=ROAD_NAME lcolor=0:90:255
 </pre></div>
--->
 
-Example: using the driver to generate a PDF file with a raster map (bash-syntax):
+<p>
+Example: using the driver to generate a PDF raster file with a raster
+map (bash-syntax):
 
 <div class="code"><pre>
 export GRASS_RENDER_IMMEDIATE=cairo
@@ -128,6 +132,20 @@ export GRASS_RENDER_HEIGHT=800
 
 g.region raster=elevation
 d.rast map=elevation
+</pre></div>
+
+
+<h3>SVG Example</h3>
+
+Example: using the driver to generate a SVG vector file with a vector
+map (bash-syntax):
+
+<div class="code"><pre>
+export GRASS_RENDER_IMMEDIATE=cairo
+export GRASS_RENDER_FILE=vectormap.svg
+
+g.region vector=roadsmajor
+d.vect map=roadsmajor -c
 </pre></div>
 
 
