manual: fix v.to.rast examples; HTML cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@65315 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.surf.contour/r.surf.contour.html
+++ b/raster/r.surf.contour/r.surf.contour.html
@@ -81,7 +81,7 @@ r.contour input=elevation output=contours_5m step=5 minlevel=50
 
 # rasterize contour lines
 v.info -c contours_5m
-v.to.rast input=contours_5m output=contours_5m use=attr column=level
+v.to.rast input=contours_5m output=contours_5m use=attr attribute_column=level
 
 # generate DEM from rasterized contour lines
 r.surf.contour input=contours_5m output=elevation_from_cont5m
