--- a/scripts/g.extension/g.extension.html
+++ b/scripts/g.extension/g.extension.html
@@ -1,36 +1,59 @@
 <h2>DESCRIPTION</h2>
 
-<em>g.extension</em> downloads and installs, removes or updates
-extensions from
-<a href="http://svn.osgeo.org/grass/grass-addons/grass7/">GRASS Addons SVN repository</a> into the local GRASS GIS installation.
+<!-- TODO: the use of Addon and extension is not coherent -->
 
-<p>Re-running <em>g.extension</em> on an installed GRASS Addons
+<em>g.extension</em> downloads and installs, removes or updates
+extensions (Addons) from the
+<a href="http://svn.osgeo.org/grass/grass-addons/grass7/">GRASS GIS Addons repository</a>
+into the local GRASS GIS installation.
+
+<p>Re-running <em>g.extension</em> on an installed GRASS GIS Addon
 extension re-installs the requested extension which may include
-updates. All locally installed GRASS Addons extensions can be
-re-installed
-by <em><a href="g.extension.all.html">g.extension.all</a></em>.
+updates.
+<p>
+In order to bulk-update all locally installed GRASS GIS extensions, they can
+be re-installed altogether by the
+<em><a href="g.extension.all.html">g.extension.all</a></em> module.
+
+<h2>NOTES</h2>
+    
+GRASS GIS extensions are installed by <tt>g.extension</tt> into a dedicated 
+directory (GRASS_ADDON_BASE). The default on GNU/Linux is
+<tt>$HOME/.grass7/addons</tt>, on MS-Windows it is
+<tt>$APPDATA\GRASS7\addons</tt>.
+<p>
+The flag <b>-s</b> changes this install target directory to the GRASS GIS
+installation directory (GISBASE, e.g. <tt>/usr/</tt>) rather than the
+default GRASS_ADDON_BASE directory (see also <a href="variables.html">variables</a>).
+<em>g.extension</em> checks if the user has permission to write to
+GISBASE or GRASS_ADDON_BASE.
+<p>
+On MS-Windows systems, <em>g.extension</em> downloads an executable from
+the GRASS GIS project server. On all other operating systems, it downloads the
+source code of the requested Addon and compiles it locally.
 
 <h2>EXAMPLES</h2>
 
+<h3>Download and install of an extension</h3>
 Download and install <em>r.stream.distance</em> into current GRASS installation
 
 <div class="code"><pre>
 g.extension extension=r.stream.distance
 </pre></div>
 
-Remove locally installed extension
+<h3>Removal of a locally installed extension</h3>
 
 <div class="code"><pre>
 g.extension extension=r.stream.distance operation=remove
 </pre></div>
 
-List all available extensions from GRASS Addons SVN repository
+<h3>List all available extensions from GRASS Addons SVN repository</h3>
 
 <div class="code"><pre>
 g.extension -l
 </pre></div>
 
-List all locally installed extensions
+<h3>List all locally installed extensions</h3>
 
 <div class="code"><pre>
 g.extension -a
@@ -43,7 +66,9 @@ g.extension -a
 </em>
 
 <p>
-See also <a href="http://grasswiki.osgeo.org/wiki/GRASS_AddOns">GRASS Addons</a> wiki page.
+<a href="http://grass.osgeo.org/grass70/manuals/addons/">GRASS GIS 7 Addons Manual pages</a>
+<br>
+<a href="http://grasswiki.osgeo.org/wiki/GRASS_AddOns">GRASS Addons</a> wiki page.
 
 <h2>AUTHORS</h2>
 
