--- a/raster/r.profile/r.profile.html
+++ b/raster/r.profile/r.profile.html
@@ -49,16 +49,35 @@ each profile point.
 If the units are not specified, current location units will be used.
 In case of geographic locations (latitude/longitude), meters are used as default unit.
 
+<h2>NOTES</h2>
+
+The profile resolution is measured exactly from the supplied end or
+"turning" point along the profile. The end of a profile segment will be an
+exact multiple of the profile resolution and will therefore not always match
+the end point coordinates entered for the segmanet.
+
+<p>To extract the numbers in scripts, following parameters can be used:
+<div class="code"><pre>
+r.profile input=dgm12.5 coordinates=3570631,5763556 2>/dev/null
+</pre></div>
+
+This filters out the everything except the numbers.
+
 <h2>EXAMPLES</h2>
 
-<b>Example 1</b><br>
-Extract a profile with coordinates provided on the command line:
+<h3>Extraction of values along profile defined by coordinates (variant 1)</h3>
+
+Extract a profile with coordinates (wayoints) provided on the command line
+(North Carolina data set):
 
 <div class="code"><pre>
-r.profile input=elevation output=profile_points coordinates=562517,7779433,562984,7779533,563875,7779800
+g.region raster=elevation -p
+r.profile -g input=elevation output=profile_points.csv \
+          coordinates=641712,226095,641546,224138,641546,222048,641049,221186
 </pre></div>
 This will extract a profile along the track defined by the three coordinate
-pairs.
+pairs. The output file "profile_points.csv" contains
+east,north,distance,value (here: elevation).
 <p><br>
 
 
@@ -91,36 +110,35 @@ d.where | r.profile elevation.dem
 <p><br>
 -->
 
-<b>Example 2</b><br>
-Pipe coordinates into r.profile
+<h3>Extraction of values along profile defined by coordinates (variant 2)</h3>
+
+Coordinate pairs can also being "piped" into <em>r.profile</em>:
+
 <div class="code"><pre>
-r.profile elevation.dem res=1000 file=- &lt;&lt; EOF
- 591243,4926344
- 592509,4922156
- 594100,4920793
- 599910,4919365
- 602929,4919235
- 604844,4918391
- 606468,4917190
- 607766,4915664
+r.profile elevation resolution=1000 file=- &lt;&lt; EOF
+641712,226095
+641546,224138
+641546,222048
+641049,221186
 EOF
 </pre></div>
 
+The output is the following:
 
-<h2>NOTES</h2>
-
-The profile resolution is measured exactly from the supplied end or
-"turning" point along the profile. The end of a profile segment will be an
-exact multiple of the profile resolution and will therefore not always match
-the end point coordinates entered for the segmanet.
-
-<p>To extract the numbers in scripts, following parameters can be used:
 <div class="code"><pre>
-r.profile input=dgm12.5 coordinates=3570631,5763556 2>/dev/null
+Using resolution: 1000 [meters]
+Output columns:
+Along track dist. [meters], Elevation
+Approx. transect length: 1964.027749 [meters]
+ 0.000000 84.661507
+ 1000.000000 98.179062
+Approx. transect length: 2090.000000 [meters]
+ 1964.027749 83.638138
+ 2964.027749 89.141029
+ 3964.027749 78.497757
+Approx. transect length: 995.014070 [meters]
+ 4054.027749 73.988029
 </pre></div>
-
-This filters out the everything except the numbers.
-
 
 <h2>SEE ALSO</h2>
 
