variables.html: minor sync to trunk
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@65420 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -374,10 +374,10 @@ PERMANENT
 For specific driver-related variables see:
 
 <ul>
-  <li><em><a href="cairodriver.html">Cairo driver</a></em></li>
-  <li><em><a href="pngdriver.html">PNG driver</a></em></li>
-  <li><em><a href="psdriver.html">PS (Postscript) driver</a></em></li>
-  <li><em><a href="htmldriver.html">HTML driver</a></em></li>
+  <li><em><a href="cairodriver.html">Cairo display driver</a></em></li>
+  <li><em><a href="pngdriver.html">PNG display driver</a></em></li>
+  <li><em><a href="psdriver.html">PS (Postscript) display driver</a></em></li>
+  <li><em><a href="htmldriver.html">HTML display driver</a></em></li>
 </ul>
 
 <h3>List of selected internal GRASS environment variables</h3>
