change GRASS_TMPDIR_MAPSET to be accepted only by vector library        (see https://trac.osgeo.org/grass/ticket/2349#comment:36)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65436 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -352,7 +352,13 @@ PERMANENT
   <tt>$LOCATION/$MAPSET/.tmp/$HOSTNAME</tt>. If GRASS_TMPDIR_MAPSET is
   set to '0', the temporary directory is located in TMPDIR
   (environmental variable defined by the user or GRASS initialization
-  script if not given).</dd>
+  script if not given).
+
+  <p>
+  Important note: This variable is currently used only in vector
+  library. In other words the variable is ignored by raster or
+  raster3d library.
+  </dd>
   
   <dt>TMPDIR, TEMP, TMP</dt>
   <dd>[Various GRASS GIS commands and wxGUI]<br>
