v.to.3d: make reverse transformation possible also for lines - contours
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65493 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.to.3d/v.to.3d.html
+++ b/vector/v.to.3d/v.to.3d.html
@@ -14,6 +14,11 @@ features can be optionally stored in <b>column</b>.
 
 When transforming 2D vector features to 3D based on attribute, all
 NULL values are silently converted to height 0.0.
+<p>
+Reverse transformation is possible for points and lines.
+In case of lines, the reverse transformation should be used
+only when all vertices of a line have the same z-coordinate
+(for example contours).
 
 <h2>EXAMPLES</h2>
 
