i.atcorr: Geoeye1 support added (contribution by Marco Vizzari, Perugia Italy)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65518 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.atcorr/i.atcorr.html
+++ b/imagery/i.atcorr/i.atcorr.html
@@ -180,6 +180,13 @@ the ascendant node at equator</td>
 <td>enter month,day,hh.ddd,long.,lat. *</td>
 </tr>
 
+
+<tr>
+<td>19</td>
+<td><b>Geoeye 1</b></td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
+
 </table>
 
 <blockquote>
@@ -604,7 +611,11 @@ micrometer.</td>
 <tr><td>123</td><td>Landsat 8 SWIR2 Band (2037nm - 2355nm)</td></tr>
 
 
-
+<tr><td>115</td><td><b>GeoEye 1</b> Panchromatic band (0.450-0.800)</td></tr>
+<tr><td>116</td><td>GeoEye 1 Blue Band  (0.450-0.510)</td></tr>
+<tr><td>117</td><td>GeoEye 1 Green Band (0.510-0.580)</td></tr>
+<tr><td>118</td><td>GeoEye 1 Red Band (0.655-0.690)</td></tr>
+<tr><td>120</td><td>GeoEye 1 NIR Band (0.780-0.920)</td></tr>
 
 </table>
 
@@ -775,7 +786,9 @@ overview., IEEE Trans. Geosc. and Remote Sens. 35(3):675-686.
 <p><em>Added Landsat 8 from <a href="http://landsat.gsfc.nasa.gov/?p=5779">NASA sources</a>, addition 05/2014:</em>
 <br>Nikolaos Ves
 
-
+<p><em>Geoeye1 addition 7/2015:</em>
+<br>Marco Vizzari
+ 
 <p>
 <i>Last changed: $Date$</i>
 
