v.vect.stats manual: fix timestamp
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@65536 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/vector/v.vect.stats/v.vect.stats.html
+++ b/vector/v.vect.stats/v.vect.stats.html
@@ -160,4 +160,5 @@ v.db.select myzipcodes_wake column=ZIPCODE_,ZIPNAME,avg_elev
 
 Markus Metz
 
-<p><i>Last changed: $Date: 2008-08-13 21:52:37 +0200 (Wed, 13 Aug 2008) $</i>
+<p>
+<i>Last changed: $Date: 2015-01-01 13:07:46 +0100 (Thu, 01 Jan 2015) $</i>
