Added hint on transformation of ccw aspect to azimuth
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65553 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.slope.aspect/r.slope.aspect.html
+++ b/raster/r.slope.aspect/r.slope.aspect.html
@@ -23,6 +23,10 @@ facing. The aspect categories represent the number degrees of east. Category
 and color table files are also generated for the aspect raster map. The aspect
 categories represent the number degrees of east and they increase
 counterclockwise: 90 degrees is North, 180 is West, 270 is South 360 is East.
+These values can be transformed to azimuth (0 is North, 90 is East, etc) values using <a href="r.mapcalc.html">r.mapcalc</a>:
+<div class="code"><pre>
+r.mapcalc "azimuth_aspect = (450 - ccw_aspect) % 360"
+</pre></div>
 
 <p>
 The aspect is not defined for slope equal to zero.
