various typo fixes, found by the Debian lintian QA tool
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65575 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/gui/wxpython/vdigit/g.gui.vdigit.html
+++ b/gui/wxpython/vdigit/g.gui.vdigit.html
@@ -43,7 +43,7 @@ A new vector map can be easily created from the digitizer toolbar by
 selecting &quot;New vector map&quot; in &quot;Select vector map&quot;
 combobox. A new vector map is created, added to the current layer tree
 in Layer Manager and opened for editing. &quot;Select vector map&quot;
-combobox in the digitizer toolbar also allows to easily switch between
+combobox in the digitizer toolbar also allows easily switching between
 vector maps to be edited.
 
 <h3>EDITING AN EXISTING VECTOR MAP</h3>
