--- a/raster/r.neighbors/r.neighbors.html
+++ b/raster/r.neighbors/r.neighbors.html
@@ -159,7 +159,7 @@ The result is rounded to the nearest integer (in this case 64).
 <em>Neighborhood Size:</em>
 The neighborhood <b>size</b> specifies which cells surrounding any given
 cell fall into the neighborhood for that cell.
-The <b>size</b> must be an odd integer and represent the lenght of one of
+The <b>size</b> must be an odd integer and represent the length of one of
 moving window edges in cells.
 For example, a size value of 3 will result in
 <div class="code"><pre>
