--- a/raster/r.null/r.null.html
+++ b/raster/r.null/r.null.html
@@ -36,7 +36,7 @@ Note that value is restricted to integer if the map is an integer map.
 <p><em>r.null</em> and reclassified maps:<br>
 The problem is, if r.null was run on the reclass raster it would alter the
 original and any other reclass rasters of the original.  Therefore r.null 
-doesn't allow to recode reclassified maps (products of r.reclass).
+doesn't allow recoding reclassified maps (products of r.reclass).
 <br>
 So, the way to recode such a map is: The user makes a raster out of the
 reclass that isn't a reclass by copying it:<br>
