--- a/raster3d/r3.flow/r3.flow.html
+++ b/raster3d/r3.flow/r3.flow.html
@@ -33,7 +33,7 @@ is represented by one vector line with one category. With <b>a</b> flag, an attr
 and each category (record) represents one segment of a flowline, so that attributes
 specific for segments can be written. In case of <b>vector_field</b> input, only velocity is written,
 in case of <b>input</b> option, also values of the input 3D raster are written.
-Option <b>sampled</b> allows to sample (query) given 3D raster by flow lines (computed from different 3D raster) and
+Option <b>sampled</b> allows sampling (query) given 3D raster by flow lines (computed from different 3D raster) and
 write the values of the given 3D raster as attributes of the flow line segments.
 Note that using <b>a</b> flag results in longer computation time, so consider increasing
 <b>step</b> and <b>max_error</b> parameter.
