--- a/temporal/t.rast.accdetect/t.rast.accdetect.html
+++ b/temporal/t.rast.accdetect/t.rast.accdetect.html
@@ -24,7 +24,7 @@ The <b>minimum</b> and <b>maximum</b> values of the pattern detection
 process can be set, either by using space time raster datasets or 
 by using fixed values for all raster cells and time steps. 
 <p>
-Using space time raster datasets allow to specify minimum and maximum 
+Using space time raster datasets allow specifying minimum and maximum 
 values for each raster cell and each time step. For example, we want to 
 detect the germination (minimum value) and harvesting (maximum value) 
 dates for different crops in Germany using the growing-degree-day (GDD) 
