--- a/temporal/t.rast.to.vect/t.rast.to.vect.html
+++ b/temporal/t.rast.to.vect/t.rast.to.vect.html
@@ -19,7 +19,7 @@ However, this will only work in conjunction with the <em>-t</em>
 flag, that avoids the creation of attribute tables. 
 The parallel creation of attribute tables is not supported.
 <p>
-The <em>where</em> option allows to select subsets of the input space time raster
+The <em>where</em> option allows selecting subsets of the input space time raster
 dataset.
 <p>
 The flag <em>-n</em> can be used to force the registration of empty 
